Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Done
-
Affects Version/s: 5.10.0 RC
-
Fix Version/s: 5.9.4
-
Component/s: Build tools: windeployqt
-
Labels:None
-
Environment:Windows, MSVC 2017
-
Commits:f8bb798ade81f152bc8ff2028e4974150171fa08 (qttools/5.9, 8.12.2017, 5.9.4)
Description
Dear Maintainers,
the release of Visual Studio 15.5 changed the name of the vc_redist files.
Before: vcredist_$ARCH.exe (eg C:\Program Files (x86)\Microsoft Visual Studio\2017\Professional\VC\Redist\MSVC\14.11.25325\vcredist_x64.exe)
Now: vc_redist.$ARCH.exe (eg ... 14.12.25810\vc_redist.x64.exe)
They added a "." between redist and $ARCH, and a "_" in front.
My proposal is adding a second check to qttools/src/windeployqt/main.cpp, Line 1122: (First part unchanged)
const QFileInfo fi(releaseRedistDir + QLatin1Char('/') + QStringLiteral("vcredist_") + wordSizeString + QStringLiteral(".exe")); if (fi.isFile()) redistFiles.append(fi.absoluteFilePath()); // Second check for VS >= 14.12.25810 const QFileInfo fiNewFormat(releaseRedistDir + QLatin1Char('/') + QStringLiteral("vc_redist.") + wordSizeString + QStringLiteral(".exe")); if (fiNewFormat.isFile()) redistFiles.append(fiNewFormat.absoluteFilePath());
Attachments
Issue Links
- is duplicated by
-
QTBUG-65719 windeployqt: Cannot find Visual Studio release redistributable files (Community)
-
- Closed
-