windeployqt: Fix deployment of MSVC 2017 15.5 release redistributable

The file name was changed.

Task-number: QTBUG-65015
Change-Id: I0a81a42abae3bcf9b124acbea55ba4e275594016
Reviewed-by: Maurice Kalinowski <maurice.kalinowski@qt.io>